styles/global.css
*, *::after, *::before{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

:root{
    --pink-light: #C59DD2;
    --pink-base: #9547A5;
    --pink-dark: #7D298A;
    --pink-low: #3F0F41;

    --blue-light: #73B6D2;
    --blue-base: #358BB9;
    --blue-mid: #2374A4;
    --blue-dark: #144A72;
    --blue-low: #08233C;

    --shape-stroke: #002347;
    --shape-hover: #001933;
    --shape-base: #000F1F;
    --shape-background: #00050A;

    --text-title: #F8FBFB;
    --text-body: #E2E7E9;
    --text-label: #BAC6C9;

    --ff: "Raleway", serif;

    --title-lg:700 3rem var(--ff);
    --title-md:700 2.5rem var(--ff);
    --title-sm:700 2rem var(--ff);
    --title-xs:700 1rem  var(--ff);

    --subtitle:500 2rem/200% var(--ff);
    --body-lg:1.25rem/140% var(--ff);
    --body-md:1rem/140% var(--ff);
    --body-sm:.875rem/140% var(--ff);
    --body-xs:.75rem/140% var(--ff);

    --button:700 .875rem var(--ff);
    --link:500 .875rem var(--ff);
    --tag:700 .625rem var(--ff);
}

body{
    background: var(--shape-background);
    color: var(--text-body);
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow-x: hidden;
}

.container{
    margin-inline: 1.25rem;
    max-width: 23.4375rem;
}

a{
    text-decoration: none;
}

h1{
    font: 700 1.75rem var(--ff);
    color: var(--text-title);
}

h2{
    font: 700 1.5rem var(--ff);
    color: var(--text-body);
}

img{
    max-width: 100%;
}

a{
    text-decoration: none;
    color: inherit;
}

.desktop-only{
    display: none;
}

.mobile-only{
    display: block;
}

@media (width >= 80em){
    h1{
        font: var(--title-lg);
    }
    h2{
        font: var(--title-sm);
    }
    body{
        display: initial;
        overflow-x: hidden;
    }
    .container{
        margin-inline: 10rem;
        max-width: unset;
    }
    .desktop-only{
        display: block;
    }

    .mobile-only{
        display: none;
    }
}

